crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__address_literal_ident.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{@foo}\"#)"
---
Error: Unexpected identifier "foo" at offset 2, expected one of a decimal number, or a hexadecimal number
