crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__alternates_with_transform.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{foo | bar | baz :base64}\"#)"
---
{ foo
| bar
| baz
: base64}
