crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__bool_literals.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{true | false}\"#)"
---
Expr(
    Expr {
        alternates: [
            Chain {
                root: Some(
                    Bool(
                        true,
                    ),
                ),
                accessors: [],
            },
            Chain {
                root: Some(
                    Bool(
                        false,
                    ),
                ),
                accessors: [],
            },
        ],
        transform: None,
    },
)
