crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__byte_literal_whitespace.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{b 'foo'}\"#)"
---
Error: Unexpected string "foo" at offset 4, expected one of ':', '|', or '}'
